--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,7 @@ body {
     position: relative;
     height: 100vh;
     width: 100%;
+    z-index: 30;
 }
 
 .detail_title_pic {
@@ -548,8 +549,100 @@ body {
 }
 
 .detail_content_wrapper {
-    height: 900px;
-    background-color: #171616;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 100;
 }
 
+.detail_content_logo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 40px;
+    padding-left: 40px;
+    z-index: 140;
+}
+
+.detail_content_logo > h1 {
+    font-family: 'Vesper Libre', sans-serif;
+    font-size: 3em;
+    line-height: 0.5;
+    color: rgba(255,2550, 255);
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+}
+
+.detail_content_nav {
+    position: fixed;
+    margin-top: 40px;
+    margin-left: 300px;
+    font-family: 'Encode Sans Condensed', sans-serif;
+    font-weight: 200;
+    font-size: 1.5em;
+    float: right;
+    width: 58%;
+    height: auto;
+    overflow-y: hidden;
+    z-index: 140;
+}
+
+.detail_content_nav > ol {
+    list-style: none;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    margin-bottom: -30px;
+    width: 100%;
+    padding-top: 2px;
+    padding-bottom: 30px;
+}
+
+.detail_nav_item {
+    text-align: center;
+    padding-top: 5px;
+    display: inline-block;
+    margin: 0 50px;
+    -webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
+    -moz-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
+    -o-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
+    transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+.detail_nav_item > a {
+    text-decoration: none;
+    color: #171616;
+    text-transform: uppercase;
+    
+    line-height: 0.7;
+}
+
+.detail_nav_item#placeholder {
+    width: 100px;
+}
+
+.detail_content_display {
+    padding: 150px 50px;
+    z-index: 120;
+}
+
+.display_img {
+    position: absolute;
+    max-height: 80vh;
+    left: 340px;
+    top: 280px;
+}
+
+.display_shadow {
+    position: relative;
+}
+
+.design #display_shadow_1 {
+    left: 180px;
+    top: 40px;
+    background-color: rgba(255, 125, 98, 1);
+    width: 550px;
+    height: 680px;
+}
 
