--- a/css/style.css
+++ b/css/style.css
@@ -460,8 +460,27 @@ body {
 
 /*Detail Page Style Sheet*/
 
+.home_logo_button {
+    text-decoration: none;
+    position: fixed;
+    cursor: pointer;
+    left: 40px;
+    top: 40px;
+    z-index: 100;
+}
+
+.home_logo_button > div {
+    font-family: "Vesper Libre", sans-serif;
+    font-weight: 700;
+    font-size: 2em;
+    text-align: left;
+    line-height: 0.8;
+    color: #fff;
+    text-shadow: 0px 0px 4px #171616;
+}
+
 .detail_title {
-    position: relative;
+    position: fixed;
     height: 100vh;
     width: 100%;
     z-index: 30;
@@ -469,10 +488,14 @@ body {
 
 .detail_title_pic {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+}
+
+.tween_detail_pic {
+    border-radius: 0 100% 100% 0;
 }
 
 .detail_title_text {
@@ -480,8 +503,6 @@ body {
     white-space: nowrap;
     word-break: normal;
     z-index: 50;
-    background-color: rgba(255, 255, 255, 0.3);
-    box-shadow: 0px 0px 15px rgba(255, 255, 255, 1);
 }
 
 .detail_title_text > h1 {
@@ -524,15 +545,28 @@ body {
 
 .arrow_button {
     position: absolute;
+    
+    background: #171616;
+    border-radius: 100%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+    z-index: 100;
+    cursor: pointer;
+}
+
+#arrow_button_left {
     top: 500px;
     left: 550px;
     height: 150px;
     width: 150px;
-    background: #171616;
-    border-radius: 100%;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
-    z-index: 50;
-    cursor: pointer;
+}
+
+#arrow_button_right {
+    opacity: 0;
+    top: 450px;
+    width: 100px;
+    height: 100px;
+    right: 100px;
+    transform: rotate(180deg);
 }
 
 .arrow_button path {
@@ -546,103 +580,5 @@ body {
     height: 40px;
     width: 40px;
     transform: translate(-50%, -50%);
-}
-
-.detail_content_wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #fff;
-    z-index: 100;
-}
-
-.detail_content_logo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-top: 40px;
-    padding-left: 40px;
-    z-index: 140;
-}
-
-.detail_content_logo > h1 {
-    font-family: 'Vesper Libre', sans-serif;
-    font-size: 3em;
-    line-height: 0.5;
-    color: rgba(255,2550, 255);
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
-}
-
-.detail_content_nav {
-    position: fixed;
-    margin-top: 40px;
-    margin-left: 300px;
-    font-family: 'Encode Sans Condensed', sans-serif;
-    font-weight: 200;
-    font-size: 1.5em;
-    float: right;
-    width: 58%;
-    height: auto;
-    overflow-y: hidden;
-    z-index: 140;
-}
-
-.detail_content_nav > ol {
-    list-style: none;
-    overflow-x: auto;
-    overflow-y: hidden;
-    white-space: nowrap;
-    margin-bottom: -30px;
-    width: 100%;
-    padding-top: 2px;
-    padding-bottom: 30px;
-}
-
-.detail_nav_item {
-    text-align: center;
-    padding-top: 5px;
-    display: inline-block;
-    margin: 0 50px;
-    -webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
-    -moz-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
-    -o-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
-    transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.detail_nav_item > a {
-    text-decoration: none;
-    color: #171616;
-    text-transform: uppercase;
-    
-    line-height: 0.7;
-}
-
-.detail_nav_item#placeholder {
-    width: 100px;
-}
-
-.detail_content_display {
-    padding: 150px 50px;
-    z-index: 120;
-}
-
-.display_img {
-    position: absolute;
-    max-height: 80vh;
-    left: 340px;
-    top: 280px;
-}
-
-.display_shadow {
-    position: relative;
-}
-
-.design #display_shadow_1 {
-    left: 180px;
-    top: 40px;
-    background-color: rgba(255, 125, 98, 1);
-    width: 550px;
-    height: 680px;
 }
 
