--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ body {
     position: absolute;
     white-space: nowrap;
     word-break: normal;
-    z-index: 50;
+    z-index: 90;
 }
 
 .detail_title_text > h1 {
@@ -545,7 +545,6 @@ body {
 
 .arrow_button {
     position: absolute;
-    
     background: #171616;
     border-radius: 100%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
@@ -582,3 +581,43 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.detail_content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(255, 123, 0);
+}
+
+.detail_main_circle {
+    position: absolute;
+    left: 350px;
+    top: 450px;
+    width: 400px;
+    height: 400px;
+    transform: translate(-50%, -50%);
+    border-radius: 100%;
+    background-color: rgba(255, 129, 98);
+}
+
+.detail_main_display {
+    position: absolute;
+    left: 400px;
+    top: 0;
+    height: 100%;
+    width: calc(100vw - 400px);
+    background-color: #fff;
+}
+
+.img_display {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 100vh;
+    width: auto; 
+}
+
+.display_pic img{
+    height: 100vh;
+}
