--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,7 @@ body {
     top: 0;
     height: 100vh;
     width: 100%;
-    background-color: rgba(255, 123, 0);
+    background-color: #fff;
 }
 
 .detail_main_circle {
@@ -598,7 +598,7 @@ body {
     height: 400px;
     transform: translate(-50%, -50%);
     border-radius: 100%;
-    background-color: rgba(255, 129, 98);
+    background-color: rgba(255, 184, 109, 1);
 }
 
 .detail_main_display {
