--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ body {
 .trigger {
     width: 100%;
     height: 1px;
-    background-color: red;
+/*    background-color: red;*/
 }
 
 .content_container .content {
@@ -497,8 +497,8 @@ body {
 
 .home_logo_button > div {
     font-family: "Dosis", sans-serif;
-    font-weight: 200;
-    font-size: 1.1em;
+    font-weight: 500;
+    font-size: 1.5em;
     text-align: left;
     line-height: 0.8;
     color: #171616;
