design.html nav bar updated
responsive page layout needs to be fixed,
nav bar container shift doesn't when displaying detailed content (layouts overlap)

--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,8 @@ body {
 /**********************************Design.html***********************************/
 
 #design_title_pic {
-    background-image: url(../img/design/listen.png);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.1)),
+                      url(../img/design/listen.png);
 }
 
 #design_title_text {
