--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -3,8 +3,9 @@ body.index {
 	padding: 0;
 	height: 100vh;
 	width: 100vw;
-	background-color: #b861ff;
-	overflow: hidden;
+	background: radial-gradient(#b861ff, #652cb7);
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -20,11 +21,20 @@ ul {
 	list-style-type: none;
 }
 
+.cannot-see {
+	visibility: hidden;
+}
+
+.hide {
+	display: none;
+}
+
 .index-container {
 	position: relative;
 	width: 100%;
 	height: 100%;
 	min-width: 840px;
+	min-height: 660px;
 }
 
 .index-wrap-round {
@@ -48,18 +58,18 @@ ul {
 	transform-origin: center;
 	transform: rotate(-90deg) translate(-50%, 50%);
 	left: calc(-321px / 2);
-	top: 5px;
+	top: 100px;
 }
 
 .index-wrap-round > span#education {
-	transform: translateY(0%);
+	transform: translateY(50%);
 }
 
 .index-wrap-round > ul.navbar {
-	top: 50%;
-	right: calc(38px + -50vh);
-	width: 100vh;
-	transform: rotate(90deg) translateY(-50%);
+	top: calc(630px / 2);
+	right: calc(-630px / 2);
+	white-space:  nowrap;
+	transform: rotate(90deg) translateY(50%);
 }
 
 .index-wrap-round > ul.navbar li {
@@ -68,6 +78,7 @@ ul {
 	margin-left: 2px;
 	margin-right: 2px;
 	cursor: pointer;
+	transition: background-color 0.2s ease;
 }
 
 .index-wrap-round > ul.navbar li:after {
@@ -78,12 +89,16 @@ ul {
 	transform: translateX(-50%) scaleX(0) translateZ(0);
 	width: 100%;
 	height: 1px;
-	background-color: #ea41aa;
+	background-color: #261435;
 	transition: transform 0.2s ease;
 }
 
 .index-wrap-round > ul.navbar li:hover:after {
 	transform: translateX(-50%) scaleX(1) translateZ(0); 
+}
+
+.index-wrap-round > ul.navbar li:hover {
+	background-color: #e783fb;
 }
 
 .index-drop {
