--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -1,13 +1,4 @@
-body.index {
-	margin: 0;
-	padding: 0;
-	height: 100vh;
-	width: 100vw;
-	background: radial-gradient(#9845b9, #4e1a79);
-	overflow-x: auto;
-	overflow-y: hidden;
-}
-
+\/************************************general******************************/
 ::-webkit-scrollbar {
     width: 0px;
     background: transparent;
@@ -29,6 +20,121 @@ ul {
 	display: none;
 }
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
+ul.navbar {
+	position: fixed;
+	font-family: 'Fira Sans Condensed', sans-serif;
+	font-size: calc(13px + 0.1vw);
+	letter-spacing: 1.9px;
+	padding: 10px 15px;
+	margin: 0;
+	font-weight: 400;
+	color: #a897b5;
+	top: calc(609.23px / 2);
+	left: calc(-609.23px / 2);
+	white-space:  nowrap;
+	transform-origin: center;
+	transform: rotate(-90deg) translateY(50%);
+	z-index: 1000;
+}
+
+ul.navbar li {
+	position: relative;
+	display: inline-block;
+	margin-left: 2px;
+	margin-right: 2px;
+	cursor: pointer;
+	transition: all 0.2s ease;
+}
+
+ul.navbar li:after {
+	position: absolute;
+	content: "";
+	bottom: -3px;
+	left: 50%;
+	transform: translateX(-50%) scaleX(0) translateZ(0);
+	width: 100%;
+	height: 1px;
+	background-color: #fbf5ff;
+	transition: transform 0.2s ease;
+}
+
+ul.navbar li:hover:after {
+	transform: translateX(-50%) scaleX(1) translateZ(0); 
+}
+
+ul.navbar li:hover {
+	background-color: #a43d8c;
+	color: #fbf5ff;
+}
+
+.display {
+	margin-bottom: 50px;
+}
+
+.display .thumbnail-wrapper {
+	position: relative;
+	height: 200px;
+}
+
+.display .thumbnail {
+	position: absolute;
+	width: 100px;
+	height: 180px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+}
+
+.display .thumbnail .pic {
+	position: relative;
+	width: 100px;
+	height: 150px;
+	box-shadow: -18px 5px 10px rgba(40, 5, 78, 0.62);
+	overflow: hidden;
+}
+
+.display .thumbnail .pic > img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.display .thumbnail .title {
+	width: 100px;
+	height: auto;
+	margin-top: 6px;
+	text-align: left;
+}
+
+.display .thumbnail .title > span,
+.catalog > p.title,
+.catalog .table > p.entry {
+	height: auto;
+	color: #b0a9b3;
+	font-family: 'Fira Sans Condensed', sans-serif;
+	font-size: 12px;
+	letter-spacing: 1.5px;
+	text-shadow: -18px 5px 4px rgba(40, 5, 78, 0.62);
+}
+
+/************************************general******************************/
+
+/************************************index******************************/
+body.index {
+	height: 100vh;
+	width: 100vw;
+	background: radial-gradient(#9845b9, #4e1a79);
+	overflow-x: auto;
+	overflow-y: hidden;
+}
+
 .index-container {
 	position: relative;
 	width: 100%;
@@ -37,14 +143,14 @@ ul {
 	min-height: 660px;
 }
 
+/*
 .index-wrap-round {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
 
-.index-wrap-round > span,
-.index-wrap-round > ul {
+.index-wrap-round > span {
 	position: absolute;
 	font-family: 'Fira Sans Condensed', sans-serif;
 	font-size: calc(13px + 0.1vw);
@@ -58,54 +164,20 @@ ul {
 	transform-origin: center;
 	transform: rotate(-90deg) translate(-50%, 50%);
 	left: calc(-321px / 2);
-	top: 100px;
+	top: 5px;
+	color: grey;
 }
 
 .index-wrap-round > span#education {
 	transform: translateY(50%);
+	color: grey;
 }
-
-.index-wrap-round > ul.navbar {
-	top: calc(630px / 2);
-	right: calc(-630px / 2);
-	white-space:  nowrap;
-	transform: rotate(90deg) translateY(50%);
-}
-
-.index-wrap-round > ul.navbar li {
-	position: relative;
-	display: inline-block;
-	margin-left: 2px;
-	margin-right: 2px;
-	cursor: pointer;
-	transition: all 0.2s ease;
-}
-
-.index-wrap-round > ul.navbar li:after {
-	position: absolute;
-	content: "";
-	bottom: -3px;
-	left: 50%;
-	transform: translateX(-50%) scaleX(0) translateZ(0);
-	width: 100%;
-	height: 1px;
-	background-color: #fbf5ff;
-	transition: transform 0.2s ease;
-}
-
-.index-wrap-round > ul.navbar li:hover:after {
-	transform: translateX(-50%) scaleX(1) translateZ(0); 
-}
-
-.index-wrap-round > ul.navbar li:hover {
-	background-color: #a43d8c;
-	color: #fbf5ff;
-}
+*/
 
 .index-background {
 	z-index: 10;
 	position: absolute;
-	left: 50%;
+	left: 45%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 }
@@ -147,27 +219,27 @@ ul {
 .index-title > span#C {
 	top: 20%;
 	left: 30%;
-	color: #551d8d;
+	color: #9e0ff7;
 }
 .index-title > span#A {
 	top: 32%;
 	left: 30%;
-	color: #7128bb;
+	color: #8f35ea;
 }
 .index-title > span#N1 {
 	top: 44%;
 	left: 30%;
-	color: #8441d6;
+	color: #a760ff;
 }
 .index-title > span#D1 {
 	top: 56%;
 	left: 30%;
-	color: #973fe6;
+	color: #b45dea;
 }
 .index-title > span#Y {
 	top: 68%;
 	left: 30%;
-	color: #a355ea;
+	color: #c76dec;
 }
 .index-title > span#D2 {
 	top: 40%;
@@ -204,5 +276,31 @@ ul {
 	font-size: calc(50px + 1vw);
 }
 .index-title > span.scroll-down > i {
-	color: #9011e6;
+	color: #e28df7;
 }
+
+/************************************index******************************/
+
+/************************************design******************************/
+.design-background {
+	position: absolute;
+	background-color: #FFF;
+	height: 100vh;
+	width: 100%;
+}
+
+.design-content-wrapper {
+	width: 100%;
+	background-color: #4e1a79;
+}
+
+.design-content-wrapper .main-content {
+	height: auto;
+	margin-left: 50px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	padding-left: 100px;
+	padding-right: 30px;
+}
+
+/************************************design******************************/
