--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -1,4 +1,4 @@
-\/************************************general******************************/
+/************************************general******************************/
 ::-webkit-scrollbar {
     width: 0px;
     background: transparent;
@@ -25,33 +25,39 @@ body {
 	padding: 0;
 }
 
-ul.navbar {
-	position: fixed;
-	font-family: 'Fira Sans Condensed', sans-serif;
-	font-size: calc(13px + 0.1vw);
-	letter-spacing: 1.9px;
-	padding: 10px 15px;
-	margin: 0;
-	font-weight: 400;
-	color: #a897b5;
-	top: calc(609.23px / 2 + 80px);
-	left: calc(-609.23px / 2);
-	white-space:  nowrap;
-	transform-origin: center;
-	transform: rotate(-90deg) translateY(50%);
+.nav-bar-container {
+	position: relative;
 	z-index: 1000;
 }
 
-ul.navbar li {
+ul.nav-bar {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	margin-top: 20px;
+	white-space: nowrap;
+}
+
+ul.nav-bar li {
 	position: relative;
 	display: inline-block;
-	margin-left: 2px;
-	margin-right: 2px;
+	margin-left: 5px;
+	margin-right: 5px;
 	cursor: pointer;
+}
+
+ul.nav-bar li a {
+	text-decoration: none;
+	font-family: 'Fira Sans Condensed', sans-serif;
+	font-size: calc(13px + 0.1vw);
+	letter-spacing: 1.9px;
+	font-weight: 400;
+	color: #000;
 	transition: all 0.2s ease;
 }
 
-ul.navbar li:after {
+ul.nav-bar li:after {
 	position: absolute;
 	content: "";
 	bottom: -3px;
@@ -63,11 +69,11 @@ ul.navbar li:after {
 	transition: transform 0.2s ease;
 }
 
-ul.navbar li:hover:after {
+ul.nav-bar li:hover:after {
 	transform: translateX(-50%) scaleX(1) translateZ(0); 
 }
 
-ul.navbar li:hover {
+ul.nav-bar li:hover a {
 	color: #de4199;
 }
 
@@ -154,9 +160,6 @@ ul.navbar li:hover {
 body.index {
 	height: 100vh;
 	width: 100vw;
-	background: #f9f9f9;;
-	overflow-x: auto;
-	overflow-y: hidden;
 }
 
 .index-container {
@@ -165,6 +168,8 @@ body.index {
 	height: 100%;
 	min-width: 840px;
 	min-height: 660px;
+	overflow: auto;
+	background-color: #f9f9f9;
 }
 
 /*
@@ -294,21 +299,9 @@ body.index {
 	color: #976c87;
 }
 
-.index-title > span.scroll-down {
-	bottom: -12%;
-	left: 50%;
-	font-size: calc(50px + 1vw);
-}
-.index-title > span.scroll-down > i {
-	color: #c4879d;
-}
-
 /************************************index******************************/
 
 /************************************design******************************/
-body.design {
-	background-color: #f9f9f9;
-}
 .design-background {
 	position: absolute;
 	background-color: #FFF;
@@ -318,15 +311,12 @@ body.design {
 
 .design-content-wrapper {
 	width: 100%;
+	background-color: #f9f9f9;
 }
 
 .design-content-wrapper .main-content {
 	height: auto;
-	margin-left: 50px;
-	padding-top: 100px;
-	padding-bottom: 100px;
-	padding-left: 100px;
-	padding-right: 30px;
+	padding: 100px;
 }
 
 .design svg.select-stroke {
