--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -36,6 +36,7 @@ ul.nav-bar {
 	left: 50%;
 	transform: translateX(-50%);
 	margin-top: 20px;
+	padding: 0;
 	white-space: nowrap;
 }
 
@@ -172,36 +173,23 @@ body.index {
 	background-color: #f9f9f9;
 }
 
-/*
-.index-wrap-round {
-	position: relative;
-	width: 100%;
-	height: 100%;
+.index-bottom {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: center;
+	margin-bottom: 20px;
 }
 
-.index-wrap-round > span {
-	position: absolute;
+.index-bottom > span {
+	display: block;
 	font-family: 'Fira Sans Condensed', sans-serif;
 	font-size: calc(13px + 0.1vw);
 	letter-spacing: 1.9px;
-	padding: 10px 15px;
-	font-weight: 400;
-	color: #a897b5;
+	font-weight: 300;
+	color: #000;
 }
-
-.index-wrap-round > span#title {
-	transform-origin: center;
-	transform: rotate(-90deg) translate(-50%, 50%);
-	left: calc(-321px / 2);
-	top: 5px;
-	color: grey;
-}
-
-.index-wrap-round > span#education {
-	transform: translateY(50%);
-	color: grey;
-}
-*/
 
 .index-background {
 	z-index: 10;
