--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -296,7 +296,7 @@ body.index {
 /************************************design******************************/
 .transit {
 	position: absolute;
-	left: -100vw;
+	right: 100vw;
 	top: 0;
 	height: 100vh;
 	width: 100%;
