--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -166,7 +166,7 @@ ul.nav-bar li.on a {
 .catalog .table > p.entry {
 	color: #000000;
 	font-family: 'Roboto Slab', serif;
-	font-size: calc(12px + 0.1vw);
+	font-size: 12px;
 	letter-spacing: 1.5px;
 }
 
@@ -187,32 +187,92 @@ ul.nav-bar li.on a {
 /************************************general******************************/
 
 /************************************index******************************/
+body.index .nav-bar-container {
+	position: absolute;
+	margin-left: 40px;
+	top: 190px;
+	left: 0;
+	transform: none;
+}
+
+body.index .nav-bar-container li {
+	display: block;
+}
+
+body.index .nav-bar-container li:after {
+	display: none;
+}
+
+body.index .nav-bar-container li a {
+	font-family: 'Vesper Libre', serif;
+	text-align: left;
+	text-transform: uppercase;
+	line-height: 1;
+	font-size: 50px;
+	font-weight: 900;
+	color: #5f0d9f;
+}
+
+body.index .nav-bar-container li:hover a,
+body.index .nav-bar-container li#home a {
+	color: #ad805b;
+}
+
 .index-container {
 	position: relative;
 	height: 100vh;
 	width: 100vw;
-	min-width: 840px;
-	min-height: 660px;
+	min-width: 760px;
+	min-height: 820px;
 	overflow: auto;
 	background-color: #f9f9f9;
 }
 
-.index-bottom {
+.index-title {
 	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	text-align: center;
-	margin-bottom: 20px;
+	margin: 40px;
 }
 
-.index-bottom > span {
+.index-title > span {
 	display: block;
-	font-family: 'Roboto Slab', serif;
-	font-size: 14px;
-	font-weight: 300;
-	letter-spacing: 1px;
-	color: #000;
+	font-family: 'Vesper Libre', serif;
+	text-align: left;
+	text-transform: uppercase;
+	line-height: 1;
+	font-size: 50px;
+	font-weight: 900;
+	color: #504954;
+}
+
+.index-info {
+	position: absolute;
+	bottom: 0;
+	margin: 70px;
+	font-family: "Roboto Slab", sans-serif;
+	font-size: 11px;
+	color: #5f0d9f;
+}
+
+.index-info > span {
+	display: block;
+}
+
+.index-info span:nth-child(1) {
+	margin-bottom: 30px;
+}
+
+.index-info span i{
+	font-size: 18px;
+}
+
+.index-info span a {
+	text-decoration: none;
+	color: #5f0d9f;
+	transition: color 0.2s ease;
+}
+
+.index-info span a:hover {
+	color: #ad805b;
 }
 
 .particles-container {
@@ -234,92 +294,6 @@ ul.nav-bar li.on a {
 	background-size: cover;
 }
 
-.index-poster {
-	width: 45%;
-	height: 80%;
-	max-width: 828px;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	z-index: 5;
-	-webkit-perspective: 500px; /* Safari 4-8  */
-    -webkit-perspective-origin: bottom right; /* Safari 4-8  */   perspective: 500px;
-    perspective-origin: bottom right;
-}
-
-.index-poster .index-title {
-	position: relative;
-	height: 100%;
-	width: 100%;
-	-webkit-transform-style: preserve-3d; /* Safari 3-8  */    
-    -webkit-transform: rotateX(20deg); /* Safari 3-8  */
-    transform-style: preserve-3d;
-    transform: rotateX(20deg);
-}
-
-.index-title > span {
-	position: absolute;
-	transform: translate(-50%, -50%);
-	font-family: 'Roboto Slab', serif;
-	font-size: calc(150px + 1vw);
-	font-weight: 400;
-	text-shadow: -10px 5px 15px rgba(57, 48, 68, 0.72);
-}
-
-.index-title > span#C {
-	top: 20%;
-	left: 30%;
-	color: #ca9be1;
-}
-.index-title > span#A {
-	top: 32%;
-	left: 30%;
-	color: #c99eeb;
-}
-.index-title > span#N1 {
-	top: 44%;
-	left: 30%;
-	color: #b488ea;
-}
-.index-title > span#D1 {
-	top: 56%;
-	left: 30%;
-	color: #c7a0f7;
-}
-.index-title > span#Y {
-	top: 68%;
-	left: 30%;
-	color: #d1b4f5;
-}
-.index-title > span#D2 {
-	top: 40%;
-	left: 65%;
-	color: #ffb6d3;
-}
-.index-title > span#O {
-	top: 52%;
-	left: 65%;;
-	color: #efa5cc;
-}
-.index-title > span#N2 {
-	top: 64%;
-	left: 65%;
-	color: #dc96ab;
-}
-.index-title > span#G {
-	top: 76%;
-	left: 65%;
-	color: #b67e99;
-}
-.index-title > span#dot {
-	top: 88%;
-	left: 80%;
-	font-size: calc(30px + 1vw);
-}
-.index-title > span#dot > i {
-	color: #976c87;
-}
 
 /************************************index******************************/
 
