--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -440,14 +440,19 @@ svg path.gold-svg {
 	margin-top: 20px;
 }
 
+.project .project-pic-part div {
+	text-align: center;
+}
+
 .project .project-pic-part span {
-	display: block;
+	display: inline-block;
 	word-break: break-word;
 	font-family: "Roboto Slab", sans-serif;
 	font-size: 13px;
 	font-weight: 300;
 	margin-top: 20px;
-	text-align: center;
+	text-align: left;
 }
+
 
 /*********************************design****************************/
