--- a/version_2/css/style.css
+++ b/version_2/css/style.css
@@ -68,7 +68,7 @@ body {
 	line-height: 1;
 	font-size: 50px;
 	font-weight: 900;
-	color: #ad805b;
+	color: #c53296;
 	transition: color 0.2s ease;
 }
 
@@ -77,7 +77,7 @@ body {
 }
 
 .nav-bar-container li a:hover {
-	color: #de8947;
+	color: #f52db5;
 }
 
 .display {
@@ -162,15 +162,55 @@ svg path.purple-svg {
 	fill: #5F0D9F;
 }
 
-svg path.gold-svg {
-	fill: #AD805B;
+svg path.pink-svg {
+	fill: #c53296;
+}
+
+.small-logo {
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 280px;
+	left: -20px;
+	z-index: 900;
+}
+
+.small-logo svg {
+	width: 350px;
+}
+
+.mask-logo .header-pic {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.mask-logo .header-pic > img {
+	position: absolute;
+	right: 0;
+	min-width: 85%;
+	max-width: 100%;
+	min-height: 90%;
+	display: block;
+}
+
+.mask-logo {
+	width: 100%;
+	height: 100%;
+}
+
+.mask-logo svg {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /************************************general******************************/
 
 /************************************index******************************/
-
-
 .index-container {
 	position: relative;
 	height: 100vh;
@@ -194,7 +234,16 @@ svg path.gold-svg {
 	line-height: 1;
 	font-size: 50px;
 	font-weight: 900;
-	color: #504954;
+	color: #9f8baf;
+}
+
+.index-info .avatar {
+	margin-bottom: 10px;
+}
+
+.index-info .avatar > img {
+	width: 50px;
+	border-radius: 100%;
 }
 
 .index-info {
@@ -222,14 +271,14 @@ svg path.gold-svg {
 }
 
 .index-info span a:hover {
-	color: #ad805b;
+	color: #c53296;
 }
 
 .index-logo {
 	position: absolute;
+	transform: translate(-50%, -50%);
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
 	z-index: 900;
 }
 
@@ -237,86 +286,41 @@ svg path.gold-svg {
 	width: 550px;
 }
 
-.small-logo {
-	position: relative;
-	top: 90px;
-	left: -200px;
-	width: 350px;
-}
-
-.small-logo svg {
-	width: 350px;
-}
-
 /************************************index******************************/
 
 /*********************************design****************************/
 .content-wrapper {
 	width: 100%;
-	margin-top: 100vh;
-}
-
-/*
-.thumbnail-wrapper {
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	padding-left: 300px;
-}
-
-.thumbnail-wrapper .thumbnail {
 	position: relative;
-	top: 250px;
 }
 
-.thumbnail-wrapper .thumbnail-header span {
-	display: block;
-	font-family: 'Vesper Libre', serif;
-	font-size: 80px;
-	font-weight: 400;
-	line-height: 1;
-	color: #cac7c7;
-	white-space: nowrap;
-	margin: 20px 0;
-	text-transform: uppercase;
-	cursor: pointer;
-	transition: color 0.5s ease;
+.content-header {
+	min-width: 787px;
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
 }
 
-.thumbnail-wrapper .thumbnail-header:hover span {
-	color: #70667d;
+.content-header .index-info {
+	position: absolute;
+	top: 0;
+	right: 0;
+	text-align: right;
+	margin-top: 40px;
+	color: #88808e;
 }
 
-.thumbnail-wrapper .thumbnail-item-wrapper span {
-	display: block;
-	font-family: "Roboto Slab", sans-serif;
-	font-size: 13px;
-	font-weight: 300;
-	color: #cac7c7;
-	letter-spacing: 2px;
-}
-*/
-
-.details-header {
-	margin-top: 100px;
-	padding: 0 40px;
-}
-
-.details-header span {
-	font-family: 'Vesper Libre', serif;
-	font-size: 80px;
-	font-weight: 400;
-	line-height: 1;
-	color: #5F0D9F;
-	text-shadow: -5px 4px #ad805b;
-	text-transform: uppercase;
+.content-header .index-info a {
+	color: #88808e;
 }
 
 .project-wrapper {
 	position: relative;
+	top: -50vh;
 	width: 100%;
 	min-width: 991px;
-	margin: 100px 0;
+	margin: 50px 0;
 }
 
 .project .project-pic {
@@ -349,7 +353,7 @@ svg path.gold-svg {
 	position: absolute;
 	height: 3px;
 	width: 300px;
-	background-color: #5f0d9f;
+	background-color: #c53296;
 	top: 50%;
 	right: 100%;
 }
@@ -357,7 +361,7 @@ svg path.gold-svg {
 .project .project-intro .number {
 	font-size: 100px;
 	line-height: 1;
-	color: #5f0d9f;
+	color: #c53296;
 	font-family: 'Vesper Libre', serif;
 	font-weight: 900;
 }
@@ -365,11 +369,11 @@ svg path.gold-svg {
 .project .project-intro .title span:nth-child(1) {
 	font-family: 'Vesper Libre', serif;
 	font-weight: 900;
-	font-size: calc(50px + 0.5vw);
+	font-size: 45px;
 	width: 100%;
 	line-height: 1;
 	word-break: break-word;
-	color: #5f0d9f;
+	color: #c53296;
 	text-transform: uppercase;
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
